--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -1,5 +1,5 @@
 \chapter{Einleitung}
-\label{ch:einleitung}
+\label{ch:1}
 
 \section{Problemstellung und Relevanz}
 \label{ch:1.1}
@@ -9,16 +9,16 @@ Die deutsche Bau- und Immobilienbranche steht vor immensen Herausforderungen, di
 Verschärft wird diese Situation durch eine traditionell fragmentierte und sequenziell organisierte Projektabwicklung. Die etablierte Projektkultur in Deutschland, die stärker auf vertragliche Abgrenzung als auf kooperative Zusammenarbeit ausgerichtet ist, begünstigt strukturelle Ineffizienzen. Dies manifestiert sich in Kosten- und Terminüberschreitungen, die bei öffentlichen Großprojekten im Durchschnitt bei über 40\,\% liegen.\autocite[vgl.]{korn2019}
 Als vielversprechender Lösungsansatz haben sich international integrierte Projektabwicklungsmodelle wie die \ac{IPA} etabliert. Bei diesen Modellen liegt der Fokus auf einem kollaborativen Ansatz, bei dem wesentliche Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um das Projekt gemeinsam auf den Gesamterfolg auszurichten.
 Auch in Deutschland hat das Thema in den letzten Jahren stark an Fahrt aufgenommen. Das IPA-Zentrum identifizierte in seinem Jahresbericht 2025 bereits über 43 Pilotprojekte\autocite[vgl. S. 11 ]{haghsheno_ipa-report_2025}.
-Ein zentraler Prozessbaustein zur Kosten- und Wertsteuerung innerhalb dieser Modelle ist das \enquote{\ac{TVD}}. Während zu den übergeordneten vertraglichen Rahmenbedingungen (\ac{IPA}) bereits Forschung im deutschen Kontext existiert, fehlt bislang eine systematische, prozessorientierte Aufbereitung für die Anwendung von TVD. Es mangelt an einer Übersetzung der Methodik, die den spezifischen Restriktionen der deutschen Baupraxis (\acs{VOB}, \acs{HOAI}) Rechnung trägt. Hier setzt die vorliegende Arbeit an.
+Ein zentraler Prozessbaustein zur Kosten- und Wertsteuerung innerhalb dieser Modelle ist das \enquote{\ac{TVD}}. Während zu den übergeordneten vertraglichen Rahmenbedingungen (\ac{IPA}) bereits Forschung im deutschen Kontext existiert, fehlt bislang eine systematische, prozessorientierte Aufbereitung für die Anwendung von \ac{TVD}. Es mangelt an einer Übersetzung der Methodik, die den spezifischen Restriktionen der deutschen Baupraxis (\acs{VOB}, \acs{HOAI}) Rechnung trägt. Hier setzt die vorliegende Arbeit an.
 
 \section{Zielsetzung und Forschungsfrage}
-\label{sec:zielsetzung}
+\label{sec:1.2}
 
-Ziel dieser Arbeit ist es, den Ansatz des Target Value Design (TVD) systematisch zu analysieren, strukturiert darzustellen und hinsichtlich seiner Anwendbarkeit in der deutschen Baupraxis kritisch zu bewerten. Im Mittelpunkt steht dabei nicht die Einführung einer neuen Projektabwicklungsform, sondern die Untersuchung von TVD als wert- und kostensteuernden Prozess innerhalb eines durch rechtliche, organisatorische und kulturelle Rahmenbedingungen geprägten Systems.
+Ziel dieser Arbeit ist es, den Ansatz des \acf{TVD} systematisch zu analysieren, strukturiert darzustellen und hinsichtlich seiner Anwendbarkeit in der deutschen Baupraxis kritisch zu bewerten. Im Mittelpunkt steht dabei nicht die Einführung einer neuen Projektabwicklungsform, sondern die Untersuchung von \ac{TVD} als wert- und kostensteuernden Prozess innerhalb eines durch rechtliche, organisatorische und kulturelle Rahmenbedingungen geprägten Systems.
 
-Ausgangspunkt der Arbeit ist die Beobachtung, dass Target Value Design international vor allem im Kontext integrierter und partnerschaftlicher Projektabwicklungsmodelle erfolgreich eingesetzt wird, während seine Anwendung in Deutschland bislang nur punktuell erfolgt und überwiegend auf Pilotprojekte beschränkt bleibt. Zwar gewinnen Modelle wie die Integrierte Projektabwicklung (IPA) zunehmend an Bedeutung, eine systematische, prozessorientierte Aufbereitung des TVD selbst sowie eine kritische Analyse seiner Schnittstellen zum deutschen Ordnungsrahmen fehlen jedoch weitgehend.
+Ausgangspunkt der Arbeit ist die Beobachtung, dass Target Value Design international vor allem im Kontext integrierter und partnerschaftlicher Projektabwicklungsmodelle erfolgreich eingesetzt wird, während seine Anwendung in Deutschland bislang nur punktuell erfolgt und überwiegend auf Pilotprojekte beschränkt bleibt. Zwar gewinnen Modelle wie die \acs{IPA} zunehmend an Bedeutung, eine systematische, prozessorientierte Aufbereitung des \ac{TVD} selbst sowie eine kritische Analyse seiner Schnittstellen zum deutschen Ordnungsrahmen fehlen jedoch weitgehend.
 
-Vor diesem Hintergrund verfolgt die Arbeit das Ziel, den TVD-Prozess in seine wesentlichen Phasen, Rollen und Entscheidungslogiken zu zerlegen, nachvollziehbar darzustellen und mit den bestehenden Rahmenbedingungen der deutschen Baupraxis abzugleichen. Der Fokus liegt dabei insbesondere auf jenen Kontexten, in denen vergabe-, genehmigungs- und haushaltsrechtliche Vorgaben den Projektablauf maßgeblich prägen, ohne den Anwendungsbereich der Untersuchung darauf zu beschränken.
+Vor diesem Hintergrund verfolgt die Arbeit das Ziel, den \ac{TVD}-Prozess in seine wesentlichen Phasen, Rollen und Entscheidungslogiken zu zerlegen, nachvollziehbar darzustellen und mit den bestehenden Rahmenbedingungen der deutschen Baupraxis abzugleichen. Der Fokus liegt dabei insbesondere auf jenen Kontexten, in denen vergabe-, genehmigungs- und haushaltsrechtliche Vorgaben den Projektablauf maßgeblich prägen, ohne den Anwendungsbereich der Untersuchung darauf zu beschränken.
 
 Aus dieser Zielsetzung leitet sich die zentrale Forschungsfrage der Arbeit ab:
 
@@ -28,40 +28,7 @@ Aus dieser Zielsetzung leitet sich die zentrale Forschungsfrage der Arbeit ab:
 Dabei hat die Beantwortung dieser Frage keine pauschale Bewertung der generellen Machbarkeit von \ac{TVD} zum Ziel. Vielmehr soll aufgezeigt werden, unter welchen Bedingungen die Methodik in Deutschland wirksam eingesetzt werden kann, wo Anpassungen erforderlich sind und an welchen Stellen strukturelle Grenzen bestehen, die auch durch kooperative Vertragsmodelle nur eingeschränkt überwunden werden können.
 
 \section{Methodisches Vorgehen und Aufbau der Arbeit}
-\label{ch:1.3}
-
-Zur Beantwortung der Forschungsfrage verfolgt die Arbeit einen literaturbasierten, konzeptionell-analytischen Forschungsansatz. Ziel ist es nicht, empirische Projektdaten auszuwerten, sondern bestehende theoretische und praxisorientierte Erkenntnisse systematisch zu synthetisieren und in einen konsistenten Bezugsrahmen für die deutsche Baupraxis zu überführen.
-
-Das methodische Vorgehen gliedert sich in drei aufeinander aufbauende Schritte:
-
-\begin{enumerate}
-\item \textbf{Systematische Literaturanalyse:}
-Identifikation und Auswertung der theoretischen Grundlagen, Prinzipien und Prozessbausteine des Target Value Design auf Basis internationaler Standardwerke sowie aktueller wissenschaftlicher und praxisnaher Fachliteratur.
-\item \textbf{Prozessbeschreibung und Modellierung:}  
-Ableitung und Konstruktion eines idealtypischen TVD-Prozessmodells, das zentrale Phasen, Rollen, Entscheidungslogiken und Abhängigkeiten strukturiert darstellt und damit eine analytische Referenzbasis schafft.
-\item \textbf{Kontextanalyse und Transfer:}  
-Systematischer Abgleich des idealtypischen TVD-Modells mit den rechtlichen, organisatorischen und prozessualen Rahmenbedingungen der deutschen Baupraxis. Ziel ist die Identifikation von Spannungsfeldern, Anpassungsbedarfen und strukturellen Grenzen der Methodik.
-
-\end{enumerate}
-
-Der Aufbau der Arbeit folgt dieser methodischen Logik:
-
-Das vorliegende \cref{ch:einleitung} führt in die Problemstellung ein, begründet die Relevanz des Themas und formuliert die Zielsetzung sowie die Forschungsfrage.
-
-In \cref{ch:grundlagen} werden die theoretischen Grundlagen gelegt. Hierzu zählen insbesondere die Prinzipien des Lean Construction und des Target Value Design sowie zentrale Charakteristika der deutschen Baupraxis, die für die spätere Analyse relevant sind.
-
-\cref{ch:methodik} erläutert das Forschungsdesign und das methodische Vorgehen im Detail.
-
-Den analytischen Kern der Arbeit bildet \cref{ch:analyse}, in dem der Target Value Design-Prozess für die Phasen 0 bis 3 systematisch entwickelt und modelliert wird.
-
-Darauf aufbauend diskutiert \cref{ch:transfer} die gewonnenen Erkenntnisse kritisch. Die identifizierten Herausforderungen werden in drei systemische Spannungsfelder zusammengefasst aggregiert und hinsichtlich ihrer Ursachen und Wirkmechanismen eingeordnet.
-
-Die Arbeit schließt in \cref{ch:conclusion} mit einer Zusammenfassung der zentralen Ergebnisse sowie einem Ausblick auf weiteren Forschungsbedarf.
-
-\clearpage
-
-\section{Methodisches Vorgehen und Aufbau der Arbeit}
-\label{sec:methodology_structure}
+\label{sec:1.3}
 
 Zur Beantwortung der Forschungsfrage verfolgt die Arbeit einen literaturbasierten, konzeptionell-analytischen Forschungsansatz. Ziel ist es nicht, empirische Projektdaten auszuwerten, sondern bestehende theoretische und praxisorientierte Erkenntnisse systematisch zu synthetisieren und in einen anwendbaren Bezugsrahmen für die deutsche Baupraxis zu überführen.
 
@@ -69,19 +36,19 @@ Das methodische Vorgehen gliedert sich in drei aufeinander aufbauende Schritte:
 \begin{enumerate}
     \item \textbf{Systematische Literaturanalyse:} Identifikation und Auswertung der theoretischen Grundlagen, Prinzipien und Prozessbausteine des Target Value Design auf Basis internationaler Standardwerke sowie aktueller Fachliteratur.
     \item \textbf{Prozesssynthese:} Zusammenführung der identifizierten Bausteine zu einem idealtypischen TVD-Phasenablauf, der die zentralen Rollen, Entscheidungslogiken und Abhängigkeiten strukturiert darstellt und als analytische Referenzbasis dient.
-    \item \textbf{Kontextanalyse und Transfer:} Systematischer Abgleich dieses Referenzmodells mit den rechtlichen, organisatorischen und prozessualen Rahmenbedingungen der deutschen Baupraxis (VOB/HOAI). Ziel ist die Identifikation von Spannungsfeldern und die Ableitung von Handlungsempfehlungen für eine kontextgerechte Anwendung.
+    \item \textbf{Kontextanalyse und Transfer:} Systematischer Abgleich dieses Referenzmodells mit den rechtlichen, organisatorischen und prozessualen Rahmenbedingungen der deutschen Baupraxis (\acs{VOB}/\acs{HOAI}). Ziel ist die Identifikation von Spannungsfeldern, Anpassungsbedarfen und strukturellen Grenzen der Methodik.
 \end{enumerate}
 
 Der Aufbau der Arbeit folgt dieser methodischen Logik:
 
-Das vorliegende \textbf{Kapitel 1} führt in die Problemstellung ein, begründet die Relevanz des Themas und formuliert die Zielsetzung sowie die Forschungsfrage.
+Das vorliegende \textbf{\cref{ch:1}} führt in die Problemstellung ein, begründet die Relevanz des Themas und formuliert die Zielsetzung sowie die Forschungsfrage.
 
-In \textbf{Kapitel 2} werden die theoretischen Grundlagen gelegt. Hierzu zählen insbesondere die Prinzipien des Lean Construction, Modelle der Integrierten Projektabwicklung (IPA) und das Target Value Design sowie zentrale Charakteristika der deutschen Baupraxis, die für die spätere Analyse relevant sind.
+In \textbf{\cref{ch:2}} werden die theoretischen Grundlagen gelegt. Hierzu zählen insbesondere die Prinzipien des Lean Construction, Modelle der Integrierten Projektabwicklung und das Target Value Design sowie zentrale Charakteristika der deutschen Baupraxis, die für die spätere Analyse relevant sind.
 
-\textbf{Kapitel 3} erläutert das Forschungsdesign und das methodische Vorgehen im Detail.
+\textbf{\cref{ch:3}} erläutert das Forschungsdesign und das methodische Vorgehen im Detail.
 
-Den analytischen Kern der Arbeit bildet \textbf{Kapitel 4}, in dem der Target Value Design-Prozess für die Phasen 0 bis 3 systematisch auf seine Übertragbarkeit in den deutschen Kontext untersucht wird.
+Den analytischen Kern der Arbeit bildet \textbf{\cref{ch:4}}, in dem der Target Value Design-Prozess für die Phasen 0 bis 3 systematisch auf seine Übertragbarkeit in den deutschen Kontext untersucht wird.
 
-Darauf aufbauend diskutiert \textbf{Kapitel 5} die gewonnenen Erkenntnisse kritisch. Die identifizierten Herausforderungen werden in drei systemische Spannungsfelder zusammengefasst und hinsichtlich ihrer Ursachen und Wirkmechanismen eingeordnet.
+Darauf aufbauend diskutiert \textbf{\cref{ch:5}} die gewonnenen Erkenntnisse kritisch. Die identifizierten Herausforderungen werden in drei systemische Spannungsfelder zusammengefasst und hinsichtlich ihrer Ursachen und Wirkmechanismen eingeordnet.
 
-Die Arbeit schließt in \textbf{Kapitel 6} mit einer Zusammenfassung der zentralen Ergebnisse sowie einem Ausblick auf weiteren Forschungsbedarf.
+Die Arbeit schließt in \textbf{\cref{ch:6}} mit einer Zusammenfassung der zentralen Ergebnisse sowie einem Ausblick auf weiteren Forschungsbedarf.
