--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -1,5 +1,5 @@
 \chapter{Grundlagen}
-\label{ch:grundlagen}
+\label{ch:2}
 
 Das folgende Kapitel legt das theoretische Fundament für die Untersuchung einer wertorientierten Projektsteuerung im Bauwesen. Um die Funktionsweise und den Mehrwert des \textit{Target Value Designs} (TVD) im weiteren Verlauf der Arbeit bewerten zu können, ist ein dreistufiges Verständnis der theoretischen Zusammenhänge erforderlich. Zunächst werden die konventionellen Strukturen der deutschen Baupraxis analysiert, um die systemimmanenten Defizite aufzuzeigen. Darauf aufbauend werden die \textit{Integrierte Projektabwicklung} (IPA) als organisatorischer Rahmen und schließlich das TVD als methodisches Instrument zur aktiven Steuerung von Kosten und Werten eingeführt.
 
