--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -1,5 +1,5 @@
 \chapter{Prozesslogik und Phasen des Target Value Design}
-\label{ch:analyse}
+\label{ch:4}
 \section{Das Phasenmodell}
 \label{sec:4.1}
 
