--- a/02_mainmatter/ch5_Transfer.tex
+++ b/02_mainmatter/ch5_Transfer.tex
@@ -1,5 +1,5 @@
 \chapter{Analyse systemischer Spannungsfelder und Implementierungsbarrieren}
-\label{ch:transfer}
+\label{ch:5}
 
 Kapitel 4 hat gezeigt, dass sich das Prozessmodell des Target Value Design (TVD) nicht ohne Weiteres auf Deutschland übertragen lässt. Die identifizierten Hürden sind keine Einzelfälle, sondern das Ergebnis eines Systemkonflikts.
 Es prallen zwei Denkweisen aufeinander: Auf der einen Seite steht der TVD-Ansatz, der auf Flexibilität, Zusammenarbeit und Wahrscheinlichkeiten setzt. Auf der anderen Seite steht das deutsche System aus VOB, HOAI und Haushaltsrecht, das auf festen Preisen, strikter Trennung und detaillierten Vorgaben beharrt.
