--- a/main.tex
+++ b/main.tex
@@ -27,10 +27,10 @@ ngerman,
 \thispagestyle{plain}
 \cleardoublepage
 \thispagestyle{plain}  % Zeigt Seitennummer im Abbildungsverzeichnis
-\listoftables
-\addcontentsline{toc}{chapter}{Tabellenverzeichnis}
-\thispagestyle{plain}
-\cleardoublepage
+% \listoftables
+% \addcontentsline{toc}{chapter}{Tabellenverzeichnis}
+% \thispagestyle{plain}
+% \cleardoublepage
 \input{01_frontmatter/acronyms}
 
 % Seitenzahl des Vorspanns speichern
